# VectorCppCuda

./: .sconsign.dblite  CMakeLists.txt  LICENSE  Make.sh  README.md  SConstruct
include/: add.h
include/Classes/: Matrixin_Class.h
include/Constants/: NumericalDataTypeConstants.h
include/Ufuncs/: TEMP.h
src/bindings/: Binder.cpp  binding.cpp
src/cpp/: cpuAdd.cpp
src/cuda/: cudaAdd.cu
src/device/: Temp.cu
src/general/: Test.cpp
src/host/: Temp.cpp
src/py/: binding.cpp
test/cpp/: tests.cpp
